fix(styling): aligned button and textfield (#1213)

--- a/next-tavla/src/Admin/scenarios/AddTile/styles.module.css
+++ b/next-tavla/src/Admin/scenarios/AddTile/styles.module.css
@@ -1,5 +1,6 @@
 .SearchContainer {
     display: flex;
+    align-items: center;
     gap: 0.5em;
     padding-bottom: 1em;
 }
